[tool.poetry]
name = "magiceden"
version = "0.1.2"
description = "A scraper based API for Magic Eden, a Solana based NFT marketplace."
authors = ["Sumer Malhotra <sumermalhotra1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"
beautifulsoup4 = "^4.10.0"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
